############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

INTERNALS
---------

* ``capture_ids`` in test_run now returns a list of captures, permitting tests
  that need to test multiple runs to do so. (Robert Collins)

0.0.17
++++++

CHANGES
-------

* Restore the ability to import testrepository.repository.memory on Python 2.6.
  (Robert Collins)

0.0.16
++++++

CHANGES
-------

* A new testr.conf option ``group_regex`` can be used for grouping
  tests so that they get run in the same backend runner. (Matthew Treinish)

* Fix Python 3.* support for entrypoints; the initial code was Python3
  incompatible. (Robert Collins, Clark Boylan, #1187192)

* Switch to using multiprocessing to determine CPU counts.
 (Chris Jones, #1092276)

* The cli UI now has primitive differentiation between multiple stream types.
  This is not yet exposed to the end user, but is sufficient to enable the
  load command to take interactive input without it reading from the raw
  subunit stream on stdin. (Robert Collins)

* The scheduler can now groups tests together permitting co-dependent tests to
  always be scheduled onto the same backend. Note that this does not force
  co-dependent tests to be executed, so partial test runs (e.g. --failing)
  may still fail.  (Matthew Treinish, Robert Collins)

* When test listing fails, testr will now report an error rather than
  incorrectly trying to run zero tests. A test listing failure is detected by
  the returncode of the test listing process. (Robert Collins, #1185231)

0.0.15
++++++

CHANGES
-------

* Expects subunit v2 if the local library has v2 support in the subunit
  library. This should be seamless if the system under test shares the
  Python libraries. If it doesn't, either arrange to use ``subunit-2to1``
  or upgrade the subunit libraries for the system under test.
  (Robert Collins)

* ``--full-results`` is now a no-op, use ``--subunit`` to get unfiltered